--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,50 +1,48 @@
 name: Deploying a docker image to AWS EC2
 on:
-  push:
-  branches:
-  - main
+  push
 env:
   DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
   DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
   AWS_PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY }}
 jobs:
-  # build:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v2
-  #     - name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v1
-  #     - name: Login to DockerHub
-  #       uses: docker/login-action@v1
-  #       with:
-  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
-  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
-  #     - name: Build and push Docker image
-  #       uses: docker/build-push-action@v2
-  #       with:
-  #         context: ./
-  #         push: true
-  #         dockerfile: ./Dockerfile
-  #         tags: your-dockerhub-username/cddemo:latest
-  deploy:
-    needs: build
+  build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: ./
+          push: true
+          dockerfile: ./Dockerfile
+          tags: ritik-kesharwani/simple-restapi:latest
+  # deploy:
+  #   needs: build
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - name: Checkout code
+  #     uses: actions/checkout@v2
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ env.DOCKERHUB_USERNAME }}
-        password: ${{ env.DOCKERHUB_TOKEN }}
+  #   - name: Login to Docker Hub
+  #     uses: docker/login-action@v1
+  #     with:
+  #       username: ${{ env.DOCKERHUB_USERNAME }}
+  #       password: ${{ env.DOCKERHUB_TOKEN }}
     
-    - name: Build and push
-      uses: docker/build-push-action@v5
-      with:
-        push: true
-        tags: ritik-kesharwani/simple-restapi:latest
+  #   - name: Build and push
+  #     uses: docker/build-push-action@v5
+  #     with:
+  #       push: true
+  #       tags: ritik-kesharwani/simple-restapi:latest
 
     # - name: Set permissions for private key
     #   run: |
