--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,67 +1,17 @@
-name: Deploying a docker image to AWS EC2
-on:
-  push:
-    branches:
-      - 'main'
+version: "2"
+services:
+  boilerplate-api:
+    build: .
+    environment:
+      - MONGO_URI=mongodb://mongodb:27017/express-rest-es2017-boilerplate
+    volumes:
+      - .:/app
+    ports:
+      - "3000:3000"
+    depends_on:
+      - mongodb
 
-jobs:
-  publish_image:
-    runs-on: ubuntu-latest
-    env:
-      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-      AWS_PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY }}
-      
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: ./
-          push: true
-          dockerfile: ./Dockerfile
-          tags: ritik-kesharwani/simple-restapi:latest
-  # deploy:
-  #   needs: build
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - name: Checkout code
-  #     uses: actions/checkout@v2
-
-  #   - name: Login to Docker Hub
-  #     uses: docker/login-action@v1
-  #     with:
-  #       username: ${{ env.DOCKERHUB_USERNAME }}
-  #       password: ${{ env.DOCKERHUB_TOKEN }}
-    
-  #   - name: Build and push
-  #     uses: docker/build-push-action@v5
-  #     with:
-  #       push: true
-  #       tags: ritik-kesharwani/simple-restapi:latest
-
-    # - name: Set permissions for private key
-    #   run: |
-    #     echo "${{ env.AWS_PRIVATE_KEY }}" > key.pem
-    #     chmod 600 key.pem
-    # - name: Pull Docker image
-    #   run: |
-    #     ssh -o StrictHostKeyChecking=no -i key.pem ubuntu@your-ec2-instance-ip 'sudo docker pull your-dockerhub-username/cddemo:latest'
-    # - name: Stop running container
-    #   run: |
-    #     ssh -o StrictHostKeyChecking=no -i key.pem ubuntu@your-ec2-instance-ip 'sudo docker stop cddemo || true'
-    #     ssh -o StrictHostKeyChecking=no -i key.pem ubuntu@your-ec2-instance-ip 'sudo docker rm cddemo || true'
-    # - name: Run new container
-    #   run: |
-    #     ssh -o StrictHostKeyChecking=no -i key.pem ubuntu@your-ec2-instance-ip 'sudo docker run -d --name cddemo -p 80:3000 your-dockerhub-username/cddemo:latest'
+  mongodb:
+    image: mongo
+    ports:
+      - "27017:27017"
