--- a/.github/workflows/ec2-deploy.yaml
+++ b/.github/workflows/ec2-deploy.yaml
@@ -9,29 +9,25 @@ jobs:
     runs-on: ubuntu-latest
     env:
       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+      DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
       AWS_PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY }}
       
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
       - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
+        env:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+        run: |
+          docker login -u $username -p $password
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: ./
-          push: true
-          dockerfile: ./Dockerfile
-          tags: ritik872000/ritik-kesharwani:latest
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile --tag ritik872000/ritik-kesharwani:latest
+    
+      - name: Push the Docker Image
+        run: docker push ritik872000/ritik-kesharwani:latest
   # deploy:
   #   needs: build
   #   runs-on: ubuntu-latest
