--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
+  "name": "docker_web_app",
+  "version": "1.0.0",
+  "description": "Node.js on Docker",
+  "author": "cmuth001@odu.edu",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
-    "yarn": "^1.22.22"
+    "express": "^4.16.1"
   }
 }
